--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "postcss": "^8.4.19",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.3"
   }
 }
